[workspace]
members = ["ja4", "ja4x"]
resolver = "2"

[workspace.package]
version = "0.14.0"
license = "LicenseRef-FoxIO-Proprietary"
repository = "https://github.com/FoxIO-LLC/ja4"

[workspace.dependencies]
clap = { version = "4.4", features = ["derive"] }
color-eyre = "0.6"
fs-err = "2.9"
hex = "0.4"
indexmap = "2.0"
itertools = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
